cabal-version:      2.4
name:               Norem
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Anton Ping
maintainer:         antonping1999@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable Norem
    hs-source-dirs:     app
    default-language:   Haskell2010
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        -- Utils
        --, Token
        --, Lexer
        --, Parser
        --, Pretty
        --, CPS
        --, Trans
        --, Symbol

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
          base ^>=4.14.3.0
        , containers
        --, parsec
        
        , text
        , prettyprinter
        --, fused-effects
        --, recursion-schemes
        --, lens
        --, multiset


library NoremCompilerOld
    hs-source-dirs:     CompilerOld
    default-language:   Haskell2010
    default-extensions:
          NamedFieldPuns
        , RecordWildCards
        , FlexibleContexts
        , MultiParamTypeClasses
        , GeneralizedNewtypeDeriving
        , LambdaCase
        , OverloadedStrings
        , DuplicateRecordFields
        , FlexibleInstances
        , UndecidableInstances
        , TemplateHaskell
        , ScopedTypeVariables

    exposed-modules:
          
        -- , Backend.Core
        -- , Backend.Trans
        
    other-modules:
          Utils.Syntax
        , Utils.Symbol
        , Utils.TopLevel
        , Frontend.Token
        , Frontend.Lexer
        , Frontend.Parser
        , Backend.Trans
        , Backend.DeadElim
        , Test.Test
        

    build-depends:
          base ^>=4.14.3.0
        , containers
        , parsec
        , prettyprinter
        , text
        , mtl
        , lens


library NoremCompiler
    hs-source-dirs:     Compiler
    default-language:   Haskell2010
    default-extensions:
          NamedFieldPuns
        , RecordWildCards
        , FlexibleContexts
        , MultiParamTypeClasses
        , GeneralizedNewtypeDeriving
        , LambdaCase
        , OverloadedStrings
        , DuplicateRecordFields
        , FlexibleInstances
        , UndecidableInstances
        , TemplateHaskell
        , ScopedTypeVariables

    exposed-modules:
          
        -- , Backend.Core
        -- , Backend.Trans
        
    other-modules:
          Syntax.Expr
        -- , Utils.Symbol
        -- , Utils.TopLevel
        -- , Frontend.Token
        -- , Frontend.Lexer
        -- , Frontend.Parser
        -- , Backend.Trans
        -- , Backend.DeadElim
        , Test.Test
        

    build-depends:
          base ^>=4.14.3.0
        , containers
        , parsec
        , prettyprinter
        , text
        , mtl
        , lens